docs: Revamp README with full examples and diagnostic plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(final_analysis)
 export(lcl_final)
 export(lcl_interim)
 export(plot_ce_mapping)
+export(plot_diagnostic_panel)
 export(simulate_trial_ce)
 export(simulate_trials_ce)
