--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,11 @@ Depends: R (>= 3.6)
 Imports: 
     stats,
     MASS,
-    sandwich
+    sandwich,
+    progress
 Suggests:
     ggplot2,
+    patchwork,
     testthat (>= 3.0.0),
     knitr,
     rmarkdown
