feat: Add progress bar and enhance user documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,4 @@ export(plot_ce_mapping)
 export(plot_diagnostic_panel)
 export(simulate_trial_ce)
 export(simulate_trials_ce)
+importFrom(progress,progress_bar)
